--- a/src/components/UI/button/button.module.css
+++ b/src/components/UI/button/button.module.css
@@ -1,3 +1,3 @@
 .button{
-    @apply bg-sky-700 text-amber-50 py-1 px-1 rounded-xl m-1
+    @apply bg-sky-700 text-amber-50 py-1 px-1 rounded-xl m-1 hover:p-2 transition-all
 }
