--- a/src/components/UI/foundation/foundation.module.css
+++ b/src/components/UI/foundation/foundation.module.css
@@ -1,3 +1,3 @@
 .foundation{
-    @apply bg-amber-50 w-96 h-96 border border-gray-900 rounded-xl m-auto;
+    @apply bg-amber-50 w-1/2 h-1/2 border border-gray-900 rounded-xl m-auto;
 }
